# tower-of-hanoi-curses

./: .gitignore  AUTHORS  Makefile.in  aclocal.m4  compile_commands.json  config.h.in  configure  configure.ac
.cache/clangd/index/: config.h.B6F0A2CF7C7268D5.idx  holder.h.A6A9759559698491.idx  main.c.B35546292B5EA1F4.idx  ring.h.D0AA315870801682.idx
src/: Makefile.am  Makefile.in  holder.c  holder.h  main.c  ring.c  ring.h  tower.c  tower.h
src/.deps/: main.Po  tower_of_hanoi_curses-holder.Po
